<resources>
    <string name="app_name">schedule</string>
    <string name="add_new_task" translatable="false">+ Add new task</string>
    <string name="start_a_task">Start a task</string>
    <string name="your_schedule">Your Schedule</string>
    <string name="you_don_t_have_any_tasks_yet">You don’t have any tasks yet</string>
    <string name="add_the_first_one_and_here_you_ll_see_your_schedule">Add the first one and here you’ll see your schedule</string>
    <string name="add_task">Add a Task</string>
</resources>