<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/big_tomato_icon"
        android:importantForAccessibility="no" />


    <TextView
        style="@style/MyTomatoTrainText.TitleText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:gravity="center_horizontal"
        android:text="@string/you_don_t_have_any_tasks_yet"/>


    <TextView
        style="@style/MyTomatoTrainText.PlainText"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:gravity="center"
        android:text="@string/add_the_first_one_and_here_you_ll_see_your_schedule"/>

    <Button
        style="@style/TimerButton"
        android:id="@+id/schedule_without_tasks_overlay_add_task"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="48dp"
        android:text="@string/add_task"/>

</LinearLayout>