<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingHorizontal="@dimen/screen_padding_horizontal">

    <include
        android:id="@+id/schedule_without_tasks_overlay"
        layout="@layout/schedule_without_tasks_overlay"
        android:visibility="gone" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        <Button
            android:id="@+id/schedule_start_a_task"
            style="@style/TimerButton"
            android:layout_width="match_parent"
            android:layout_height="84dp"
            android:layout_marginTop="24dp"
            android:text="@string/start_a_task"
            android:textSize="20sp" />

        <TextView
            style="@style/MyTomatoTrainText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/your_schedule"
            android:layout_marginVertical="24dp"
            android:textAllCaps="true"
            android:textSize="12sp" />

        <LinearLayout
            android:id="@+id/schedule_periodic_card_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" />

        <TextView
            android:id="@+id/schedule_add_new_task"
            style="@style/MyTomatoTrainText.PlainText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="48dp"
            android:text="@string/add_new_task" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>